<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Educación Continua Ingeniería</string>
    <string name="app_name2">Educación Continua</string>
    <string name="nulo">     </string>
    <string name="action_settings">Settings</string>
    <string name="eventos">Eventos</string>
    <string name="btn_eventos">Consultar Eventos</string>
    <string name="expositores">Expositores</string>
    <string name="btn_expositores">Consultar Expositores</string>
    <string name="desc">descartar</string>
    <string name="fecha">Fecha:</string>
    <string name="hora">Hora:</string>
    <string name="lugar">Lugar:</string>
    <string name="sitioweb">Sitio Web:</string>
    <string name="description">Descripción:</string>
    <string name="btn_anadir">Añadir al Calendario</string>
    <string name="nombre">Nombre:</string>
    <string name="correo">Correo:</string>
    <string name="id">Id:</string>
    <string name="no_internet">No existe conexion a internet</string>
    <string name="carga_eventos">Cargando eventos</string>
    <string name="carga_evento">Cargando evento</string>
    <string name="carga_expositor">Cargando expositor</string>
    <string name="carga_expositores">Cargando expositores</string>
    <string name="carga_detalles">Cargando Detalles</string>
    <string name="ir_a">Ir al Sitio</string>
    <string name="preparar_calendario">Preparando el Evento para añadir al Calendario</string>
    <string name="_">"        "</string>
    
    
    
    

    
</resources>
