<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vista.MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/nombreEventoTV"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="280dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/detallesEvendo"
                    android:layout_width="90dp"
                    android:layout_height="35dp"
                    android:text="@string/fecha"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/fechaEventoTV"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="90dp"
                    android:layout_height="35dp"
                    android:text="@string/hora"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/horaEventoTV"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:text="@string/lugar"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/lugarEventoTV"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:text="@string/sitioweb"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/sitioWebEventoTV"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/buttonCalendar"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:text="@string/btn_anadir" />

                <Button
                    android:id="@+id/btnEventos"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="Mostrar Detalles del Evento" />
            </TableRow>

        </LinearLayout>
    </ScrollView>

</LinearLayout>